# reminora

./: .gitignore  CLAUDE.md  README.md  SETUP.md  overview_ios.md  todo.md
ReminoraShareExt/: ReminoraShareExt.entitlements  ShareViewController.swift
WahiShareExt/: Info.plist  ShareViewController.swift  WahiShareExt.entitlements
backend/: CLAUDE.md  README.md  package-lock.json  package.json  wrangler.toml
droid/: ANDROID_ADDRESS_IMPLEMENTATION_SUMMARY.md  ANDROID_UPDATE_SUMMARY.md  CLAUDE.md  DROIDPORT.md  README.md  SYNC_REFERENCE.md  build.gradle.kts  gradlew  gradlew.bat  local.properties  overview_android.md  settings.gradle.kts
ios/: EMBEDDING_IMPLEMENTATION_SUMMARY.md  EMBEDDING_SETUP.md  GoogleService-Info.plist  PHOTO_EMBEDDING_IMPLEMENTATION_SUMMARY.md  PHOTO_EMBEDDING_SETUP.md  UserFollowing_CoreData_Entity.xml  UserFollowing_Entity_Instructions.md  overview_ios.md  setup.sh
lib/phash/: CMakeLists.txt  CrossCorrelation.cpp  CrossCorrelation.hpp  Makefile  README.md  test_main.cpp
reminora/: FullPhotoView.swift  LocationManager.swift  MapView.swift  PhotoLibraryView.swift  PlaceDetailView.swift  PlaceListView.swift  reminoraApp.swift  todo.md
reminora.xcodeproj/: project.pbxproj
reminoraUITests/: reminoraUITestsLaunchTests.swift
shared/: Persistence.swift
wahi/: ContentView.swift  ExpandableBottomSheetView.swift  ExpandableSearchView.swift  FullPhotoView.swift  LocationManager.swift  MapView.swift  Persistence.swift  PhotoLibraryView.swift  PlaceListView.swift  wahiApp.swift
wahi.xcodeproj/: project.pbxproj
wahiTests/: wahiTests.swift
(+310 files in other folders)
